codex-rs/tui/src/snapshots/codex_tui__memory_manager__tests__memory_manager_confirm_delete.snap
---
source: tui/src/memory_manager.rs
expression: screen
---
┌Memory Manager────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[┌Confirm Delete────────────────────────────────────────────────────────────────────────────────────────────────────┐r│
│C│Delete memory “Summarise CLI install steps for offline docs”?                                                     │ │
└─│                                                                                                                  │─┘
┌R│                                                                                                                  │─┐
│[│                                                                                                                  │ │
│[│                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
└─│[Enter] confirm   [Esc] cancel                                                                                    │─┘
[+└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘t+
Memories: 2
