codex-rs/tui/src/snapshots/codex_tui__memory_manager__tests__memory_manager_edit_modal.snap
---
source: tui/src/memory_manager.rs
expression: screen
---
┌Memory Manager────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[┌Edit Memory · CF  91%─────────────────────────────────────────────────────────────────────────────────────────────┐ │
│C│Summary  (editing)                                                                                                │ │
└─│Summarise CLI install steps for offline docs▌                                                                     │─┘
┌R│                                                                                                                  │─┐
│[│                                                                                                                  │ │
│[│                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │Tags (comma separated)                                                                                            │ │
│ │cli, docs                                                                                                         │ │
└─│[Esc] done   [Tab] switch field   [Shift+Enter] newline                                                           │─┘
[+└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘t+
Memories: 2
